# european-energy-hub

./: .gitignore  CLAUDE.md  README.md  nginx-energy-bootstrap.conf  nginx-energy.conf
.github/workflows/: ci.yml  deploy.yml
backend/: energy-api.service  energy-refresh.service  energy-refresh.timer  pyproject.toml
backend/analytics/: battery.py  congestion.py  divergence.py  flows.py  fundamental.py  gas.py  gas_flows.py  generation.py  heat_risk.py  imbalance.py  lng.py  nuclear.py  power.py  spreads.py  us_gas.py  us_plants.py  us_power.py  wm_to_agsi.json
backend/app/: db.py  main.py  project_paths.py  schemas.py
backend/data/: us_ng_plants.json
backend/results/: calibration_river_temp.csv
backend/scripts/: build_us_gas_regions.py  build_us_ng_plants.py  build_us_power_regions.py  calibrate_river_temp.py  refresh.py
backend/tests/: conftest.py  test_endpoints.py  test_generation.py
docs/: CHANGELOG.md  ROADMAP.md
frontend/: README.md  geo-README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/geo/: bidding_zones.geojson  countries.geojson  us_gas_regions.geojson  us_power_regions.geojson
frontend/src/: index.css  main.tsx  routeTree.gen.ts
frontend/src/components/: StaleBanner.tsx
frontend/src/components/gas/: CountryPanel.tsx  GasFlowPanel.tsx  GasFlowsLayer.tsx  GasMap.tsx  (+1 more)
frontend/src/lib/: api.ts  scales.test.ts  scales.ts  utils.ts
frontend/src/routes/: __root.tsx  gas.tsx  generation.tsx  imbalance.tsx  index.tsx  map.tsx  power.tsx  prices.tsx  spreads.tsx  us-gas.tsx  us-plants.tsx  us-power.tsx
(+12 files in other folders)
