[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "energy-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.5.3",
    "fastapi>=0.115",
    "pydantic>=2.11",
    "uvicorn[standard]>=0.34",
    "slowapi>=0.1.9",
    "pandas>=2.2",
    "psycopg2-binary>=2.9",
    "market-data",
    "quant-lib",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx2>=0.28"]

[tool.uv.sources]
market-data = { path = "../../shared/market-data", editable = true }
quant-lib = { path = "../../shared/quant-lib", editable = true }

[tool.setuptools.packages.find]
where = ["."]
